ready for demo local

--- a/nodeApp/views/index.jade
+++ b/nodeApp/views/index.jade
@@ -18,11 +18,11 @@ block content
         | All
       option(data-number='1')
         | < 5
-      option(data-number='1')
+      option(data-number='2')
         | 5 - 10
-      option(data-number='1')
+      option(data-number='3')
         | 10 - 15
-      option(data-number='1')
+      option(data-number='4')
         | > 15
   div
     // News Table
@@ -41,5 +41,5 @@ block content
             | Read/ Unread
           th
             | Delete
-      tbody
+      tbody(id='newsStats')
   script(src='/javascripts/demo.js')
