Commit newly added files

--- a/nodeApp/views/interface.jade
+++ b/nodeApp/views/interface.jade
@@ -23,25 +23,25 @@ block content
     select(class='selectDrop', id='senDrop')
       option
         | All
-      option(senRate = 'Positive')
+      option(senRate = 'positive')
         | Positive
-      option(senRate = 'Neutral')
+      option(senRate = 'neutral')
         | Neutral
-      option(senRate = 'Negative')
+      option(senRate = 'negative')
         | Negative
     | Category: 
     select(class='selectDrop', id='catDrop')
       option
         | All
-      option(category = 'Technology')
+      option(category = 'tech')
         | Technology
-      option(category = 'Sports')
+      option(category = 'sports')
         | Sports
-      option(category = 'Entertainment')
+      option(category = 'entertainment')
         | Entertainment
-      option(category = 'Politics')
+      option(category = 'politics')
         | Politics
-      option(category = 'Business')
+      option(category = 'business')
         | Business
 
   div
